hdone/objects/ReportCustom__c.object
<CustomObject>
    <description>Custom Report object. Used to store and display Skuid reports in Lightning app</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Report Description</description>
        <inlineHelpText>Report Description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Skuid Page object</description>
        <inlineHelpText>Skuid Page object</inlineHelpText>
        <label>Page</label>
        <referenceTo>skuid__Page__c</referenceTo>
        <relationshipLabel>ReportsCustom</relationshipLabel>
        <relationshipName>ReportsCustom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product name for report</description>
        <inlineHelpText>Product name for report</inlineHelpText>
        <label>Product Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportLink__c</fullName>
        <description>Gets base URL for org and appends Skuid URL format and page name to display Skuid page</description>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_410, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_410)) &amp; &quot;/apex/skuid__ui?page=&quot;&amp; Page__r.Name, Page__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to Report page</inlineHelpText>
        <label>ReportLink</label>
        <type>Text</type>
    </fields>
    <label>ReportCustom</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Reports_List</fullName>
        <columns>ReportLink__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>Reports List</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>ReportCustom Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ReportsCustom</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>